[package]
name = "faster_backend_compile_nightly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# This line needs to come before anything else in Cargo.toml
# cargo-features = ["codegen-backend"]

[profile.dev]
codegen-backend = "cranelift"
